Included read, write and execute permission for the owner in GWServerManager.java so that it could successfully execute the carbon server. Also prevented while loop from running more than thrice in GWIntegrationTest.java